actualice youtube y linkedin
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li>Charlas sobre investigación, tesis y proyectos académicos.</li>
             <li>Contenido para estudiantes de pregrado y postgrado.</li>
           </ul>
-          <a href="https://www.youtube.com/@TUCANAL" target="_blank" class="btn-primary">
+          <a href="https://www.youtube.com/@yaskcode" target="_blank" class="btn-primary">
             Ver videos en YouTube
           </a>
         </div>
@@ -199,7 +199,7 @@
           Mientras tanto, puedes seguir mis publicaciones en:
         </p>
         <ul>
-          <li><a href="https://www.linkedin.com/in/TULINKEDIN" target="_blank">LinkedIn</a></li>
+          <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
           <li><a href="https://scholar.google.com/" target="_blank">Google Scholar</a></li>
         </ul>
       </div>
@@ -226,7 +226,7 @@
 
           <h3>Redes profesionales</h3>
           <ul>
-            <li><a href="https://www.linkedin.com/in/TULINKEDIN" target="_blank">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/TUGITHUB" target="_blank">GitHub</a></li>
           </ul>
         </div>
@@ -258,4 +258,5 @@
   </script>
 </body>
 </html>
+
 
