actualice goole scholar
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </p>
         <ul>
           <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
-          <li><a href="https://scholar.google.com/" target="_blank">Google Scholar</a></li>
+          <li><a href="https://scholar.google.com/citations?user=zySpQB0AAAAJ&hl=es" target="_blank">Google Scholar</a></li>
         </ul>
       </div>
     </div>
@@ -221,13 +221,13 @@
           <h3>Correo</h3>
           <p>
             Puedes escribirme a:<br>
-            <a href="mailto:tu-correo@dominio.com">tu-correo@dominio.com</a>
+            <a href="mailto:yyedra@fec.luz.edu.ve">yyedra@fec.luz.edu.ve</a>
           </p>
 
           <h3>Redes profesionales</h3>
           <ul>
             <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/TUGITHUB" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
           </ul>
         </div>
 
@@ -258,5 +258,6 @@
   </script>
 </body>
 </html>
+
 
 
