--- a/index.html
+++ b/index.html
@@ -134,8 +134,13 @@
       </div>
 
       <div class="cta-center">
-        <a href="#contacto" class="btn-primary">
-          Solicitar una consultoría Smart Learning
+       <a
+    href="https://calendar.app.google/xNWC2ALEjZqgVa5a9"
+    target="_blank"
+    rel="noopener noreferrer"
+    class="btn-primary"
+  >
+         Solicitar una consultoría Smart Learning
         </a>
       </div>
     </div>
@@ -258,6 +263,7 @@
   </script>
 </body>
 </html>
+
 
 
 
