actualice coomunity lider
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#campus-yaskcode">Campus YaskCode</a>
         <a href="#smart-learning">Smart Learning</a>
         <a href="#tutorias">Tutorías Académicas</a>
-        <a href="#blog">Community Leadership</a>
+        <a href="#community-leadership">Community Leadership</a>
         <a href="#blog">Blog</a>
         <a href="#contacto" class="btn-nav">Contáctanos</a>
       </nav>
@@ -264,6 +264,7 @@
   </script>
 </body>
 </html>
+
 
 
 
