desarrollo cummunity leadership
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -190,7 +190,212 @@
       </div>
     </div>
   </section>
+<!-- ... aquí termina Tutorías Académicas ... -->
+</section>
 
+<!-- ... aquí termina Tutorías Académicas ... -->
+</section>
+
+
+<section id="community-leadership" class="section">
+  <div class="container">
+    <h2 class="section-title">Tech Advocate &amp; Community Leadership</h2>
+    <p class="section-subtitle">
+      Software Engineering Professor, Tech Advocate and Community Leader in Latin America,
+      focused on Software Engineering, AI, Cloud and Digital Learning Ecosystems.
+    </p>
+
+    <div class="card-container">
+      <!-- Mini resumen EN -->
+      <div class="card english-card">
+        <h3>English Summary for International Reviewers</h3>
+        <p>
+          Yaskelly Yedra is a Software Engineering Professor, researcher, tech advocate and
+          community leader in Latin America. She works at the intersection of Software Engineering,
+          AI, Cloud and Digital Learning Ecosystems, mentoring research projects, delivering
+          technical talks, creating open educational resources and promoting women in technology.
+        </p>
+      </div>
+
+      <!-- Card principal -->
+      <div class="card main-card">
+        <h3>Tech Advocate &amp; Community Leadership</h3>
+        <p>
+          Como profesora universitaria e investigadora en Ingeniería de Software, lidero iniciativas
+          tecnológicas orientadas al desarrollo profesional, la innovación educativa y la conexión
+          entre academia, industria y comunidad. Mi misión es democratizar la ingeniería, la IA
+          y los ecosistemas digitales en Latinoamérica.
+        </p>
+      </div>
+
+      <!-- Enfoque -->
+      <div class="card">
+        <h3>Enfoque como Tech Advocate</h3>
+        <ul>
+          <li>Democratizar el acceso a la Ingeniería de Software y la IA.</li>
+          <li>Conectar academia, industria y comunidades tecnológicas.</li>
+          <li>Impulsar buenas prácticas y pensamiento crítico en proyectos.</li>
+          <li>Promover la participación de mujeres en tecnología.</li>
+        </ul>
+      </div>
+
+      <!-- Impacto -->
+      <div class="card">
+        <h3>Impacto Comunitario</h3>
+        <ul>
+          <li>Más de <strong>XXXX+</strong> estudiantes formados en pregrado y postgrado.</li>
+          <li><strong>XX+</strong> tesis y proyectos de investigación en Ingeniería de Software.</li>
+          <li>Autora del newsletter técnico <strong>Dev &amp; Research</strong>.</li>
+          <li>Repositorios educativos y recursos abiertos en GitHub (YaskCode Academy).</li>
+        </ul>
+      </div>
+
+      <!-- Charlas -->
+      <div class="card">
+        <h3>Charlas &amp; Workshops</h3>
+        <ul>
+          <li>AI for Educators: uso de Copilot, Gemini &amp; ChatGPT en Ingeniería de Software.</li>
+          <li>WordPress + Moodle: arquitectura para ecosistemas de aprendizaje modernos.</li>
+          <li>Buenas prácticas de Ingeniería de Software para tesis y proyectos finales.</li>
+          <li>GitHub Copilot Pro en entornos académicos y profesionales.</li>
+        </ul>
+      </div>
+
+      <!-- Comunidades -->
+      <div class="card">
+        <h3>Comunidades Tecnológicas</h3>
+        <ul>
+          <li>Google Cloud Innovators.</li>
+          <li>GitHub Education – Verified Teacher.</li>
+          <li>Women in Tech (Women Who Code &amp; iniciativas LATAM).</li>
+          <li>GDG y comunidades tecnológicas en Latinoamérica.</li>
+        </ul>
+      </div>
+
+      <!-- Recursos abiertos -->
+      <div class="card">
+        <h3>Proyectos &amp; Recursos Abiertos</h3>
+        <ul>
+          <li>YaskCode Classroom Pack – plantillas y guías para cursos de programación.</li>
+          <li>AI for Educators LATAM Toolkit – recursos de IA para docentes.</li>
+          <li>Arquitecturas LMS: WordPress + Moodle + SSO – documentación abierta.</li>
+          <li>Blog técnico y contenidos sobre Ingeniería de Software &amp; EdTech.</li>
+        </ul>
+      </div>
+
+      <!-- Misión -->
+      <div class="card mission-card">
+        <h3>Mi Misión</h3>
+        <p>
+          Crear puentes entre las personas y la tecnología. Liderar, enseñar y transformar
+          desde el conocimiento, la ética y el impacto real en las comunidades que acompaño.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section id="community-leadership" class="section">
+  <div class="container">
+    <h2 class="section-title">Tech Advocate &amp; Community Leadership</h2>
+    <p class="section-subtitle">
+      Software Engineering Professor, Tech Advocate and Community Leader in Latin America,
+      focused on Software Engineering, AI, Cloud and Digital Learning Ecosystems.
+    </p>
+
+    <div class="card-container">
+      <!-- Mini resumen EN -->
+      <div class="card english-card">
+        <h3>English Summary for International Reviewers</h3>
+        <p>
+          Yaskelly Yedra is a Software Engineering Professor, researcher, tech advocate and
+          community leader in Latin America. She works at the intersection of Software Engineering,
+          AI, Cloud and Digital Learning Ecosystems, mentoring research projects, delivering
+          technical talks, creating open educational resources and promoting women in technology.
+        </p>
+      </div>
+
+      <!-- Card principal -->
+      <div class="card main-card">
+        <h3>Tech Advocate &amp; Community Leadership</h3>
+        <p>
+          Como profesora universitaria e investigadora en Ingeniería de Software, lidero iniciativas
+          tecnológicas orientadas al desarrollo profesional, la innovación educativa y la conexión
+          entre academia, industria y comunidad. Mi misión es democratizar la ingeniería, la IA
+          y los ecosistemas digitales en Latinoamérica.
+        </p>
+      </div>
+
+      <!-- Enfoque -->
+      <div class="card">
+        <h3>Enfoque como Tech Advocate</h3>
+        <ul>
+          <li>Democratizar el acceso a la Ingeniería de Software y la IA.</li>
+          <li>Conectar academia, industria y comunidades tecnológicas.</li>
+          <li>Impulsar buenas prácticas y pensamiento crítico en proyectos.</li>
+          <li>Promover la participación de mujeres en tecnología.</li>
+        </ul>
+      </div>
+
+      <!-- Impacto -->
+      <div class="card">
+        <h3>Impacto Comunitario</h3>
+        <ul>
+          <li>Más de <strong>XXXX+</strong> estudiantes formados en pregrado y postgrado.</li>
+          <li><strong>XX+</strong> tesis y proyectos de investigación en Ingeniería de Software.</li>
+          <li>Autora del newsletter técnico <strong>Dev &amp; Research</strong>.</li>
+          <li>Repositorios educativos y recursos abiertos en GitHub (YaskCode Academy).</li>
+        </ul>
+      </div>
+
+      <!-- Charlas -->
+      <div class="card">
+        <h3>Charlas &amp; Workshops</h3>
+        <ul>
+          <li>AI for Educators: uso de Copilot, Gemini &amp; ChatGPT en Ingeniería de Software.</li>
+          <li>WordPress + Moodle: arquitectura para ecosistemas de aprendizaje modernos.</li>
+          <li>Buenas prácticas de Ingeniería de Software para tesis y proyectos finales.</li>
+          <li>GitHub Copilot Pro en entornos académicos y profesionales.</li>
+        </ul>
+      </div>
+
+      <!-- Comunidades -->
+      <div class="card">
+        <h3>Comunidades Tecnológicas</h3>
+        <ul>
+          <li>Google Cloud Innovators.</li>
+          <li>GitHub Education – Verified Teacher.</li>
+          <li>Women in Tech (Women Who Code &amp; iniciativas LATAM).</li>
+          <li>GDG y comunidades tecnológicas en Latinoamérica.</li>
+        </ul>
+      </div>
+
+      <!-- Recursos abiertos -->
+      <div class="card">
+        <h3>Proyectos &amp; Recursos Abiertos</h3>
+        <ul>
+          <li>YaskCode Classroom Pack – plantillas y guías para cursos de programación.</li>
+          <li>AI for Educators LATAM Toolkit – recursos de IA para docentes.</li>
+          <li>Arquitecturas LMS: WordPress + Moodle + SSO – documentación abierta.</li>
+          <li>Blog técnico y contenidos sobre Ingeniería de Software &amp; EdTech.</li>
+        </ul>
+      </div>
+
+      <!-- Misión -->
+      <div class="card mission-card">
+        <h3>Mi Misión</h3>
+        <p>
+          Crear puentes entre las personas y la tecnología. Liderar, enseñar y transformar
+          desde el conocimiento, la ética y el impacto real en las comunidades que acompaño.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  
   <!-- Blog -->
   <section id="blog" class="section section-alt">
     <div class="container">
@@ -264,6 +469,7 @@
   </script>
 </body>
 </html>
+
 
 
 
