actualice datos de tesis
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
       <div class="card">
         <h3>Impacto Comunitario</h3>
         <ul>
-          <li>Más de <strong>XXXX+</strong> estudiantes formados en pregrado y postgrado.</li>
-          <li><strong>XX+</strong> tesis y proyectos de investigación en Ingeniería de Software.</li>
+          <li>Más de <strong>1640</strong> estudiantes formados en pregrado y postgrado.</li>
+          <li><strong>260</strong> tesis y proyectos de investigación en Ingeniería de Software.</li>
           <li>Autora del newsletter técnico <strong>Dev &amp; Research</strong>.</li>
           <li>Repositorios educativos y recursos abiertos en GitHub (YaskCode Academy).</li>
         </ul>
@@ -366,6 +366,7 @@
   </script>
 </body>
 </html>
+
 
 
 
