actualizar seccion de contacto
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -314,44 +314,31 @@
     </div>
   </section>
 
-  <!-- Contacto -->
-  <section id="contacto" class="section">
-    <div class="container">
-      <h2>Contáctanos</h2>
-      <p class="section-intro">
-        Si deseas implementar un campus virtual, contratar una consultoría o
-        solicitar tutorías académicas, completa el siguiente formulario o
-        escribe directamente a mi correo.
+<section id="contacto" class="contact-section">
+  <div class="container contact-grid">
+    
+    <div class="contact-card">
+      <h3>Correo</h3>
+      <p>Puedes escribirme a:<br>
+        <a href="mailto:yyedra@fec.luz.edu.ve">yyedra@fec.luz.edu.ve</a>
       </p>
 
-      <div class="grid-2">
-        <div>
-          <h3>Correo</h3>
-          <p>
-            Puedes escribirme a:<br>
-            <a href="mailto:yyedra@fec.luz.edu.ve">yyedra@fec.luz.edu.ve</a>
-          </p>
-
-          <h3>Redes profesionales</h3>
-          <ul>
-            <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
-          </ul>
-        </div>
-
-        <div>
-          <!-- Aquí puedes incrustar un formulario de Google Forms -->
-          <div class="form-embed">
-            <p><strong>Formulario de contacto</strong></p>
-            <p>
-              Aquí puedes incrustar un formulario de Google Forms para recibir
-              solicitudes de servicios, consultorías o tutorías.
-            </p>
-          </div>
-        </div>
-      </div>
+      <h3>Redes profesionales</h3>
+      <ul>
+        <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
+      </ul>
     </div>
-  </section>
+
+    <div class="contact-card">
+      <h3>Formulario de contacto</h3>
+      <p>Aquí puedes incrustar un formulario de Google Forms para recibir
+        solicitudes de servicios, consultorías o tutorías.</p>
+    </div>
+
+  </div>
+</section>
+
 
   <footer class="site-footer">
     <div class="container footer-content">
@@ -366,6 +353,7 @@
   </script>
 </body>
 </html>
+
 
 
 
