--- a/index.html
+++ b/index.html
@@ -315,29 +315,32 @@
   </section>
 
 <section id="contacto" class="contact-section">
-  <div class="container contact-grid">
-    
-    <div class="contact-card">
-      <h3>Correo</h3>
-      <p>Puedes escribirme a:<br>
-        <a href="mailto:yyedra@fec.luz.edu.ve">yyedra@fec.luz.edu.ve</a>
-      </p>
+  <div class="container">
+    <h2 class="contact-title">Contáctanos</h2>
 
-      <h3>Redes profesionales</h3>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
-        <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
-      </ul>
+    <div class="contact-grid">
+      <div class="contact-card">
+        <h3>Correo</h3>
+        <p>Puedes escribirme a:<br>
+          <a href="mailto:yyedra@fec.luz.edu.ve">yyedra@fec.luz.edu.ve</a>
+        </p>
+
+        <h3>Redes profesionales</h3>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
+        </ul>
+      </div>
+
+      <div class="contact-card">
+        <h3>Formulario de contacto</h3>
+        <p>Aquí puedes incrustar un formulario de Google Forms para recibir
+          solicitudes de servicios, consultorías o tutorías.</p>
+      </div>
     </div>
-
-    <div class="contact-card">
-      <h3>Formulario de contacto</h3>
-      <p>Aquí puedes incrustar un formulario de Google Forms para recibir
-        solicitudes de servicios, consultorías o tutorías.</p>
-    </div>
-
   </div>
 </section>
+
 
 
   <footer class="site-footer">
@@ -353,6 +356,7 @@
   </script>
 </body>
 </html>
+
 
 
 
