Fix HTML encoding issues in index.html
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
 <section id="contacto" class="contact-section">
   <div class="container">
-    <h2 class="contact-title">Contáctanos</h2>
+   <h2 class="contact-title contact-left">Contáctanos</h2> 
 
     <div class="contact-grid">
       <div class="contact-card">
@@ -356,6 +356,7 @@
   </script>
 </body>
 </html>
+
 
 
 
