Fix HTML formatting and structure
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@
   <div class="container">
     <h2 class="section-title">Tech Advocate &amp; Community Leadership</h2>
     <p class="section-subtitle">
+      
+  <div class="program-badges">
+  <span class="badge">Google Cloud Innovators</span>
+  <span class="badge">GitHub Education – Verified Teacher</span>
+  <span class="badge">Women in Tech LATAM</span>
+  <span class="badge">EdTech Architect &amp; LMS Expert</span>
+</div>
+    
       Software Engineering Professor, Tech Advocate and Community Leader in Latin America,
       focused on Software Engineering, AI, Cloud and Digital Learning Ecosystems.
     </p>
@@ -356,6 +364,7 @@
   </script>
 </body>
 </html>
+
 
 
 
