Change greeting from 'Hello' to 'Goodbye'
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   </section>
 
   <!-- Community Leadership -->
-  <section id="community-leadership" class="section">
+  <section id="community-leadership" class="section section-alt section-divider">
     <div class="container">
       <h2 class="section-title">Tech Advocate &amp; Community Leadership</h2>
 
@@ -455,6 +455,7 @@
   </script>
 </body>
 </html>
+
 
 
 
