Update print statement from 'Hello' to 'Goodbye'
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
   <!-- Contacto -->
   <section id="contacto" class="contact-section">
     <div class="container">
-      <h2 class="contact-title contact-left">Contáctanos</h2>
+      <h2 class="contact-title">Contáctanos</h2>
 
       <div class="contact-grid">
         <div class="contact-card reveal">
@@ -455,6 +455,7 @@
   </script>
 </body>
 </html>
+
 
 
 
