--- a/index.html
+++ b/index.html
@@ -394,32 +394,46 @@
   </section>
 
   <!-- Contacto -->
-  <section id="contacto" class="contact-section">
-    <div class="container">
-      <h2 class="contact-title">Contáctanos</h2>
+<section id="contacto" class="contact-section">
+  <div class="container">
+    <h2 class="contact-title">Contáctanos</h2>
 
-      <div class="contact-grid">
-        <div class="contact-card reveal">
-          <h3>Correo</h3>
-          <p>Puedes escribirme a:<br>
-            <a href="mailto:yyedra@fec.luz.edu.ve">yyedra@fec.luz.edu.ve</a>
-          </p>
+    <div class="contact-grid">
+      <div class="contact-card reveal">
+        <h3>Correo</h3>
+        <p>Puedes escribirme a:<br>
+          <a href="mailto:yyedra@fec.luz.edu.ve">yyedra@fec.luz.edu.ve</a>
+        </p>
 
-          <h3>Redes profesionales</h3>
-          <ul>
-            <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
-          </ul>
-        </div>
+        <h3>Redes profesionales</h3>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/yaskelly" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
+        </ul>
+      </div>
 
-        <div class="contact-card reveal">
-          <h3>Formulario de contacto</h3>
-          <p>Aquí puedes incrustar un formulario de Google Forms para recibir
-            solicitudes de servicios, consultorías o tutorías.</p>
-        </div>
+      <div class="contact-card reveal">
+        <h3>Formulario de contacto</h3>
+        <p>Aquí puedes incrustar un formulario de Google Forms para recibir
+          solicitudes de servicios, consultorías o tutorías.</p>
       </div>
     </div>
-  </section>
+
+    <!-- CTA profesional -->
+    <div class="cta-center">
+      <a 
+        href="https://calendar.app.google/xNWC2ALEjZqgVa5a9" 
+        class="btn-secondary"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Agendar una reunión
+      </a>
+    </div>
+
+  </div>
+</section>
+
 
   <footer class="site-footer">
     <div class="container footer-content">
@@ -460,6 +474,7 @@ revealElements.forEach((el, index) => {
   </script>
 </body>
 </html>
+
 
 
 
