Update print statement from 'Hello' to 'Goodbye'
Signed-off-by: Yaskelly Yedra <yyedra@fec.luz.edu.ve>

--- a/index.html
+++ b/index.html
@@ -411,13 +411,23 @@
           <li><a href="https://github.com/yaskelly" target="_blank">GitHub</a></li>
         </ul>
       </div>
+      
+<div class="contact-card reveal">
+  <h3>Agendar una reunión</h3>
+  <p>Puedes reservar directamente una reunión en mi calendario para
+     consultorías, tutorías o servicios profesionales.</p>
 
-      <div class="contact-card reveal">
-        <h3>Formulario de contacto</h3>
-        <p>Aquí puedes incrustar un formulario de Google Forms para recibir
-          solicitudes de servicios, consultorías o tutorías.</p>
-      </div>
-    </div>
+  <a
+    href="https://calendar.app.google/xNWC2ALEjZqgVa5a9"
+    target="_blank"
+    class="btn-primary"
+    style="display:inline-block; margin-top:1rem;"
+  >
+    Agendar ahora
+  </a>
+</div>
+
+     </div>
 
     <!-- CTA profesional -->
     <div class="cta-center">
@@ -474,6 +484,7 @@ revealElements.forEach((el, index) => {
   </script>
 </body>
 </html>
+
 
 
 
